[package]
name = "redis-hyperloglog"
version = "0.0.0"
edition = "2021"
publish = false

[[bench]]
name = "merge"
harness = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
rand = "0.8.5"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"
